# plaid_investments

./: .gitignore  LICENSE.txt  README.md  Taskfile.yml  main.py  pyproject.toml
plaid_investments/: __init__.py  api.py  client.py  db.py  schema.sql  static.py
plaid_investments/static/: accounts.js  link.js
plaid_investments/templates/: accounts.html  base.html  index.html  link.html  login.html  register.html
tests/: conftest.py  data.sql  test_api.py  test_auth.py  test_client.py  test_db.py  test_factory.py  test_static.py  test_views.py
